hphp/test/zend/good/ext/standard/tests/misc/time_nanosleep_error5.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists('time_nanosleep')) die("skip");
}
